Color Contrast fixed

--- a/styles/base.css
+++ b/styles/base.css
@@ -104,9 +104,11 @@ nav ul li {
 }
 
 nav ul li a {
-  color: white;
+  color: black;
   text-decoration: none;
   padding: 10px;
+  font-weight: 700;
+  font-size: 20px;
 }
 
 main {
@@ -116,7 +118,7 @@ main {
 main h2 {
   text-align: center;
   background-color: #61988e;
-  color: white;
+  color: black;
   border-radius: 15px;
   padding: 7.5px;
 }
@@ -124,7 +126,7 @@ main h2 {
 main h3 {
   text-align: center;
   background-color: #61988e;
-  color: white; 
+  color:black; 
   border-radius: 15px;
   padding: 7.5px;
 }
@@ -133,8 +135,10 @@ footer {
   text-align: center;
   padding: 10px 0;
   background-color: var(--header-color);
-  color: white;
+  color: Black;
   border-radius: 15px;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 .card h3 {
